--- a/index.html
+++ b/index.html
@@ -3,122 +3,153 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tap Game</title>
+    <title>TapSwap Bot Interface</title>
     <style>
-        body, html {
-            height: 100%;
+        body {
+            font-family: Arial, sans-serif;
+            background: #2c2c54;
+            color: white;
             margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #1c1e24 0%, #2c2e35 100%);
-            color: white;
-            font-family: Arial, sans-serif;
+            height: 100vh;
         }
-        #game {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            height: 100%;
-            width: 100%;
-            max-width: 500px;
-        }
-        #header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 100%;
-            padding: 10px;
-            background-color: rgba(0, 0, 0, 0.5);
-        }
-        #score {
-            font-size: 36px;
-        }
-        #tapButton {
+
+        .container {
+            text-align: center;
+            width: 300px;
             padding: 20px;
+            background: #3b3b98;
+            border-radius: 10px;
+        }
+
+        .header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .main {
+            margin-top: 20px;
+        }
+
+        .balance {
             font-size: 24px;
-            border: none;
-            border-radius: 50%;
-            background-color: #61dafb;
-            cursor: pointer;
-            transition: transform 0.1s, background-color 0.2s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-        #tapButton:active {
-            transform: scale(0.95);
-            background-color: #21a1f1;
+
+        .coin {
+            margin-right: 10px;
         }
-        #footer {
+
+        .bronze {
+            margin-left: 10px;
+        }
+
+        .coin-icon {
+            font-size: 100px;
+            margin: 20px 0;
+        }
+
+        .progress-bar {
+            background: #444;
+            border-radius: 10px;
+            overflow: hidden;
+            position: relative;
+            height: 20px;
+            margin: 20px 0;
+        }
+
+        .progress {
+            background: #ffdd59;
+            height: 100%;
+        }
+
+        .energy {
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            top: 0;
+        }
+
+        .buttons {
             display: flex;
             justify-content: space-around;
-            width: 100%;
-            padding: 10px;
-            background-color: rgba(0, 0, 0, 0.5);
         }
-        .footer-button {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+
+        .button {
+            background: #575fcf;
+            border: none;
             color: white;
-        }
-        .footer-button img {
-            width: 32px;
-            height: 32px;
-            margin-bottom: 5px;
-            transition: transform 0.2s;
-        }
-        .footer-button img:active {
-            transform: scale(0.9);
-        }
-        .footer-button div {
-            font-size: 14px;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
-    <div id="game">
-        <div id="header">
-            <div id="score">3 430</div>
-            <div>Bronze</div>
+    <div class="container">
+        <div class="header">
+            <div class="time">22:54</div>
+            <div class="telegram">Telegram</div>
+            <div class="signal">4G</div>
         </div>
-        <button id="tapButton">Tap me!</button>
-        <div id="footer">
-            <div class="footer-button">
-                <img src="ref_icon.png" alt="Ref">
-                <div>Ref</div>
+        <div class="main">
+            <div class="balance">
+                <span class="coin">🪙</span>
+                <span id="balance">0</span>
+                <span class="bronze">Bronze</span>
             </div>
-            <div class="footer-button">
-                <img src="task_icon.png" alt="Task">
-                <div>Task</div>
+            <div class="coin-icon">🪙</div>
+            <div class="progress-bar">
+                <div class="progress" id="progress" style="width: 0;"></div>
+                <div class="energy">441/500</div>
             </div>
-            <div class="footer-button">
-                <img src="tap_icon.png" alt="Tap">
-                <div>Tap</div>
-            </div>
-            <div class="footer-button">
-                <img src="boost_icon.png" alt="Boost">
-                <div>Boost</div>
-            </div>
-            <div class="footer-button">
-                <img src="stats_icon.png" alt="Stats">
-                <div>Stats</div>
+            <div class="buttons">
+                <button class="button" id="ref">Ref</button>
+                <button class="button" id="task">Task</button>
+                <button class="button" id="tap">Tap</button>
+                <button class="button" id="boost">Boost</button>
+                <button class="button" id="stats">Stats</button>
             </div>
         </div>
     </div>
-
     <script>
-        let score = 3430;
-        const tapButton = document.getElementById('tapButton');
-        const scoreDisplay = document.getElementById('score');
+        document.addEventListener('DOMContentLoaded', () => {
+            const balanceElement = document.getElementById('balance');
+            const progressElement = document.getElementById('progress');
 
-        tapButton.addEventListener('click', () => {
-            score++;
-            scoreDisplay.textContent = score;
+            // Initialize balance and progress from localStorage if available
+            let balance = localStorage.getItem('balance') ? parseInt(localStorage.getItem('balance')) : 0;
+            let progress = localStorage.getItem('progress') ? parseInt(localStorage.getItem('progress')) : 0;
+
+            balanceElement.innerText = balance;
+            progressElement.style.width = `${progress / 500 * 100}%`;
+
+            document.getElementById('tap').addEventListener('click', () => {
+                balance += 1;
+                progress += 1;
+
+                if (progress > 500) {
+                    progress = 0;
+                }
+
+                balanceElement.innerText = balance;
+                progressElement.style.width = `${progress / 500 * 100}%`;
+
+                localStorage.setItem('balance', balance);
+                localStorage.setItem('progress', progress);
+            });
+
+            // Prevent double tap zoom
+            document.addEventListener('dblclick', (e) => {
+                e.preventDefault();
+            });
         });
-
-        tapButton.addEventListener('dblclick', (e) => {
-            e.preventDefault();
-        }, false);
     </script>
 </body>
 </html>
