--- a/index.html
+++ b/index.html
@@ -164,5 +164,10 @@
                 e.preventDefault();
             });
         });
+
+        function openTaskWindow() {
+            window.open('task.html', '_blank');
+        }
+    </script>
 </body>
 </html>
